--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     align-items: center;
     background: linear-gradient(45deg,purple,orange);
 }
-.form-data{
+#form-data{
     border: 1px solid white;
     padding: 15px;
     border-radius: 8px;
@@ -18,7 +18,7 @@ body{
     width: 300px;
 }
 .form-data .form-input{
-    padding: 10px;
+    /* padding: 10px; */
 }
 form input{
      /* height: 30px; */
@@ -29,6 +29,6 @@ form input{
      padding: 10px 15px;
 }
 .form-input p{
-    padding-bottom: 5px;
+    padding-top: 5px;
     color: rgb(0, 0, 0);
 }
