--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background: linear-gradient(45deg,purple,orange);
 }
 #form-data{
@@ -31,4 +32,65 @@ form input{
 .form-input p{
     padding-top: 5px;
     color: rgb(0, 0, 0);
+}
+
+
+/* ____________________________   QUIZ APP ________________________________ */
+
+.app{
+    width: 90%;
+    max-width: 400px;
+    padding: 30px;
+    background-color: white;
+    border-radius: 10px;
+
+}
+.app h1{
+    font-weight: 600;
+    border-bottom: 2px solid black;
+    padding-bottom: 30px;
+}
+.quiz{
+    padding: 20px 0;
+}
+.quiz h2{
+    font-size: 18px;
+    color: #001e4d;
+    font-weight: 600;
+}
+.btn{
+    background: #fff;
+    color: #222;
+    font-weight: 500;
+    width: 100%;
+    border: 1px solid rgb(0, 0, 0);
+    padding: 10px;
+    margin: 10px 0;
+    text-align: left;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.btn:hover:not([disabled]){
+    background: #222;
+    color: #fff;
+}
+.btn:disabled{
+    cursor:no-drop
+}
+
+#next-btn{
+    width: 120px;
+    background-color: #222;
+    color: white;
+    padding: 5px 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500; 
+}
+.correct{
+    background: #9aeabc;
+}
+.incorrect{
+    background: #ff9393;
 }
